fixed current user issue in layout

--- a/app/assets/javascripts/backbone/templates/calendar/week/multiday_event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar/week/multiday_event.jst.ejs
@@ -1,10 +1,10 @@
 <p>
   <% if(continued) { %>
-    <i class='icon-arrow-left pull-left'></i> &nbsp;
+    <i class='icon-arrow-left'></i> &nbsp;
   <% } %>
   <b><%= e.get("name") %></b>&nbsp; 
   <%= startAt.format("M/D") %> - <%= endAt.format("M/D") %> 
   <% if(continues) { %>
-    <i class='icon-arrow-right pull-right'></i>
+    <i class='icon-arrow-right'></i>
   <% } %>
 </p>
