--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,48 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div id="fb-root"></div>
+<script>
+window.fbAsyncInit = function() {
+  FB.init({
+    appId      : 444785732265505, // App ID
+    // Uncomment channel when going into production, and set up route
+    // channelUrl : '//WWW.YOUR_DOMAIN.COM/channel.html', // Channel File
+    status     : true, // check login status
+    cookie     : true, // enable cookies to allow the server to access the session
+    xfbml      : true  // parse XFBML
+  });
+  FB.getLoginStatus(function(response) {
+    if (response.status === 'connected') {
+      Gandalf.facebookStatus = 'connected';
+      Gandalf.facebookResponse = response.authResponse;
+      Gandalf.currentUser.updateFacebook(
+          response.authResponse.userID, response.authResponse.accessToken);
+      FB.api('/me', function(response) {
+        console.log("Facebook succeeded, "+response.name);
+        console.log(response);
+      });
+
+    } else if (response.status === 'not_authorized') {
+      Gandalf.facebookStatus = 'not_authorized';
+      Gandalf.dispatcher.trigger("facebook:login");
+    } else {
+      Gandalf.facebookStatus = 'not_connected';
+      Gandalf.dispatcher.trigger("facebook:login");
+    }
+  });
+  // Additional init code here
+};
+
+// Load the SDK Asynchronously
+(function(d){
+   var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+   if (d.getElementById(id)) {return;}
+   js = d.createElement('script'); js.id = id; js.async = true;
+   js.src = "//connect.facebook.net/en_US/all.js";
+   ref.parentNode.insertBefore(js, ref);
+ }(document));
+</script>
 <div class="wrapper">
   <div class="header">
     <div class="header-container">
@@ -22,7 +64,8 @@
             <img id="logo" src="/assets/y_logo_200.png" alt="Yale Go" />
           </div>
         </a>
-        <% if current_user %>
+        <% me = current_user %>
+        <% if me %>
           <a href="#browse">
             <div class="link">
               Discover
@@ -51,10 +94,10 @@
         </a>
       </div>
       <div class="pull-right">
-        <% if current_user %>
-          <div id="user-dropdown">
+        <% if me %>
+          <div id="user-dropdown" style="min-width: 140px;">
             <div class="link">
-              <%= current_user.name %>
+              <%= me.nickname || me.name %>
             </div>
             <ul>
               <li>
