--- a/app/assets/javascripts/backbone/templates/dashboard/settings/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/settings/index.jst.ejs
@@ -9,4 +9,5 @@
   <input id='organization-image' name='image' type='file' class='hidden' accept="image/*"/>
   <br/>
   <input type='submit' class='btn btn-info' id="org-update" value='Update Organization' />
+  <div id="fb_logout" class='btn'>Logout</div>
 </form>
