--- a/app/assets/javascripts/backbone/templates/popover/facebook.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/popover/facebook.jst.ejs
@@ -1,8 +1,10 @@
 <div class='gandalf-popover-head' style='background-color: #3b5998; color: white; font-weight: bold;'>
-  Login with Facebook!
+  Login with Facebook
   <span class="close">×</span>
 </div>
 <div class="gandalf-popover-body">
-
+  <p>
+    Connecting with Facebook will also integrate Facebook events into Yale Go. Tired of countless notifications about events you don't care about? Yale Go is the solution to that. If you're the admin of a page or group on Facebook, you can connect that page or group to a Yale Go organization, and all your events will be synced, if you so choose.
+  </p>
   <button class="facebook btn">Yay facebook!</button>
 </div>
