fixed layout rendering speed issue

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,5 @@
-@import "jquery.ui.all";
+@import "jquery.ui.datepicker";
+@import "jquery.ui.autocomplete";
 @import "bourbon";
 @import "bootstrap";
 @import "backbone-forms-rails";
