--- a/app/views/main/welcome.html.haml
+++ b/app/views/main/welcome.html.haml
@@ -1,4 +1,4 @@
+= render partial: "welcome_header"
 .container
   %h2 Welcome to Gandalf
-  
   %p You're not logged in yet. Login at the top right.
