--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en" xmlns:fb="http://ogp.me/ns/fb#"> <![endif]-->
-<!--[if IE 7]> <html class="no-js lt-ie9 lt-ie8" lang="en" xmlns:fb="http://ogp.me/ns/fb#"> <![endif]-->
-<!--[if IE 8]> <html class="no-js lt-ie9" lang="en" xmlns:fb="http://ogp.me/ns/fb#"> <![endif]-->
-<!--[if gt IE 8]><!--><html xmlns:fb="http://ogp.me/ns/fb#"><!--<![endif]-->
+<html xmlns:fb="http://ogp.me/ns/fb#">
 <head>
   <title>Yale Go</title>
   <link rel="shortcut icon" href="/assets/y_logo_200.png" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= csrf_meta_tags %>
 </head>
@@ -51,78 +46,6 @@ window.fbAsyncInit = function() {
  }(document));
 </script>
 <div class="wrapper">
-  <div class="header">
-    <div class="header-container">
-      <div class="pull-left">
-        <a href="/">
-          <div class="link logo-link">
-            <img id="logo" src="/assets/y_logo_200.png" alt="Yale Go" />
-          </div>
-        </a>
-        <% me = current_user %>
-        <% if me %>
-          <a href="#browse">
-            <div class="link">
-              Discover
-            </div>
-          </a>
-          <a href="#calendar">
-            <div class="link">
-              Feed
-            </div>
-          </a>
-          <a href="#dashboard">
-            <div class="link" name='fb_logout'>
-              Dashboard
-            </div>
-          </a>
-        <% end %>
-        <a href="#about">
-          <div class="link">
-            About
-          </div>
-        </a>
-        <a href="/bulletin" data-remote="true">
-          <div class="link">
-            Test Bulletin
-          </div>
-        </a>
-      </div>
-      <div class="pull-right">
-        <% if me %>
-          <div id="user-dropdown" style="min-width: 140px;">
-            <div class="link">
-              <%= me.nickname || me.name %>
-            </div>
-            <ul>
-              <li>
-                <a href="#preferences">
-                  <div class="link dropdown-link">
-                    User Preferences
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a href="/logout">
-                  <div class="link dropdown-link">
-                    Logout
-                  </div>
-                </a>
-              </li>
-            </ul>
-          </div>
-        <% else %>
-          <a href="/login">
-            <div class="link">
-              Login
-            </div>
-          </a>
-        <% end %>
-      </div>
-    </div>
-    
-  </div>
-
   <%= yield %>
 </div>
 <%= javascript_include_tag "application" %>
