--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -28,7 +28,7 @@ ul, li {
 }
 
 a {
-  color: darken($blue, 50%);
+  color: darken($blue, 20%);
   text-decoration: none;
 }
 
@@ -284,6 +284,7 @@ $flash-notice: #3a87ad;
   line-height: $flash-height;
   font-size: $flash-height/2.5;
   text-align: center;
+  cursor: pointer;
   z-index: $header-z + 1;
   @include box-shadow(0 1px 2px rgba(black, 0.3));
   &.success {
