--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,25 +9,7 @@
 </head>
 <body>
 <div id="fb-root"></div>
-<div class="wrapper">
-  <%= yield %>
-</div>
-
-<% # Load backbone %>
-<%= javascript_include_tag "application" %>
-<% # Set up backbone %>
-<script type="text/javascript">
-  // Setting global event format string
-  Gandalf.currentUser = new Gandalf.Models.User();
-  Gandalf.currentUser.url = '/me';
-  Gandalf.currentUser.fetch({
-    success: function() {
-      window.router = new Gandalf.Router();
-      Backbone.history.start();
-    }
-  });
-</script>
-<!-- Set up Facebook -->
+<!-- Set up Facebook first since Backbone uses it -->
 <script>
 window.fbAsyncInit = function() {
   FB.init({
@@ -64,6 +46,25 @@ window.fbAsyncInit = function() {
    ref.parentNode.insertBefore(js, ref);
  }(document));
 </script>
+<div class="wrapper">
+  <%= yield %>
+</div>
+
+<% # Load backbone %>
+<%= javascript_include_tag "application" %>
+<% # Set up backbone %>
+<script type="text/javascript">
+  // Setting global event format string
+  Gandalf.currentUser = new Gandalf.Models.User();
+  Gandalf.currentUser.url = '/me';
+  Gandalf.currentUser.fetch({
+    success: function() {
+      window.router = new Gandalf.Router();
+      Backbone.history.start();
+    }
+  });
+</script>
+
 <!-- Load gauges -->
 <script type="text/javascript">
   var _gauges = _gauges || [];
