--- a/app/views/main/_header.html.erb
+++ b/app/views/main/_header.html.erb
@@ -13,7 +13,7 @@
       </a>
       <a href="#calendar">
         <div class="link">
-          Feed
+          Calendar
         </div>
       </a>
       <a href="#dashboard">
@@ -28,7 +28,7 @@
       </a>
       <a href="/bulletin" data-remote="true">
         <div class="link">
-          Test Bulletin
+          Test Bulletin (<%= ENV['SENDGRID_USERNAME'] %>)
         </div>
       </a>
     </div>
