showing organization images

--- a/app/assets/javascripts/backbone/templates/feed/event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/event.jst.ejs
@@ -1,4 +1,4 @@
-<div class="event-image" style="background-image: url('/assets/image.jpeg')" >
+<div class="event-image" style="background-image: url(<%= image %>)" >
 </div>
 <div class="details">
   <div class="name"><%= event.get("name") %></div>
