slugs for organizations

--- a/app/assets/javascripts/backbone/templates/dashboard/menu.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/menu.jst.ejs
@@ -1,5 +1,5 @@
-<a href="#dashboard/<%= id %>/events"><li data-type='events'>Events</li></a>
-<a href="#dashboard/<%= id %>/facebook"><li data-type='facebook'>Facebook</li></a>
-<a href='#dashboard/<%= id %>/users'><li data-type='users'>Users</li></a>
-<a href='#dashboard/<%= id %>/admins'><li data-type='admins'>Admins</li></a>
-<a href="#dashboard/<%= id %>/settings"><li data-type='settings'>Settings</li></a>
+<a href="#dashboard/<%= slug %>/events"><li data-type='events'>Events</li></a>
+<a href="#dashboard/<%= slug %>/facebook"><li data-type='facebook'>Facebook</li></a>
+<a href='#dashboard/<%= slug %>/users'><li data-type='users'>Users</li></a>
+<a href='#dashboard/<%= slug %>/admins'><li data-type='admins'>Admins</li></a>
+<a href="#dashboard/<%= slug %>/settings"><li data-type='settings'>Settings</li></a>
