--- a/app/assets/javascripts/backbone/templates/popover/events/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/popover/events/show.jst.ejs
@@ -8,7 +8,7 @@
     <tr>
       <td>Held by</td>
       <td>
-        <a href="#organizations/<%= e.get("organization_id") %>">
+        <a href="#organizations/<%= e.get("organization_slug") %>">
           <%= e.get("organization") %>
         </a>
       </td>
