--- a/app/assets/javascripts/backbone/templates/categories/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/categories/show.jst.ejs
@@ -1,8 +1,10 @@
+<div class="content-calendar-nav">
+  <div class="container"></div>
+</div>
 <div class="content-calendar">
 </div>
 <div class="content-body">
   <div class="container">
-    <div class="content-cal-nav"></div>
     <div class="body-header">
       <h1><%= category.get('name') %></h1>
       <button class="btn follow-button"></button>
