--- a/app/assets/javascripts/backbone/templates/browse/category.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/browse/category.jst.ejs
@@ -1,5 +1,5 @@
 <div class="cover"></div>
 <div class="content">
-  <div class="name"><a href="#categories/<%= result.id %>"><%= result.get('name') %></a></div>
+  <div class="name"><a href="#categories/<%= result.get('slug') %>"><%= result.get('name') %></a></div>
   <div class="description"><%= result.get('description') %></div>
 </div>
