--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -274,9 +274,11 @@ $flash-notice: #3a87ad;
 
 #flash {
   display: none;
-  position: relative;
+  position: fixed;
   top: 45px;
-  margin: 0 auto;
+  left: 50%;
+  // margin: 0 auto;
+  margin-left: -$min-width/4;
   width: $min-width * 0.56;
   max-height: 2*$flash-height;
   overflow: hidden;
