updated events scraper

--- a/app/views/admin/_header.html.haml
+++ b/app/views/admin/_header.html.haml
@@ -12,6 +12,8 @@
         .link Users
       %a( href="/admin/categories" )
         .link Categories
+      %a( href="/admin/locations" )
+        .link Locations
     .pull-right
       #user-dropdown
         .link= current_user.nickname || current_user.name
