--- a/app/views/admin/organizations.html.haml
+++ b/app/views/admin/organizations.html.haml
@@ -4,11 +4,11 @@
   %h1 Organizations
   %h5 Upload Data from CSV
   %p Upload a CSV with organization and organization leader data. CSV should be formatted with two columns -- student email and organization name. Be patient, this may take a little while!
-  =form_tag "/admin/organizations/import" do
+  =form_tag "/admin/organizations/import", :class => "form-inline" do
     =file_field_tag :file
-    =submit_tag "Upload CSV"
+    =submit_tag "Upload CSV", :class => "btn"
   %h5 #{@organizations.count} Organizations
-  %table
+  %table.table
     %tbody
       %tr
         %th Name
