--- a/app/views/admin/categories.html.haml
+++ b/app/views/admin/categories.html.haml
@@ -3,7 +3,7 @@
 .container.admin
   %h1 Categories
   %h5 #{@categories.count} Categories
-  %table
+  %table.table
     %tbody
       %tr
         %th Name
