--- a/app/views/admin/locations.html.haml
+++ b/app/views/admin/locations.html.haml
@@ -3,7 +3,7 @@
 .container.admin
   %h1 Locations
   %h5 #{@locations.count} Locations
-  %table
+  %table.table
     %tbody
       %tr
         %th Name
