--- a/app/views/main/welcome.html.haml
+++ b/app/views/main/welcome.html.haml
@@ -1,4 +1,10 @@
 = render partial: "welcome_header"
 .container
-  %h2 Welcome to Gandalf
-  %p You're not logged in yet. Login at the top right.
+  .welcome-container
+    %h4
+      Welcome to 
+      %span YaleGo
+    %h5 
+      We're currently in Alpha testing, but we'll be sure to notify you when we open up to all of Yale. Until then, keep
+      %span going, 
+      my friend.
