--- a/app/assets/javascripts/backbone/templates/browse/event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/browse/event.jst.ejs
@@ -1,6 +1,8 @@
-<div class="cover"></div>
+<div class="cover organization">
+  <img class="organization-image" src="<%= result.get('thumbnail') %>"/>
+  <a href="#organizations/<%= result.get('organization_slug') %>" class="organization-link"><%= result.get('organization') %></a>
+</div>
 <div class="content">
-  <div class="organization"><a href="#organizations/<%= result.get('organization_slug') %>"><span class="organization-logo"></span><%= result.get('organization') %></a></div>
   <div class="name"><a href="#events/<%= result.get('id') %>"><%= result.get('name') %></a></div>
   <div class="location"><%= result.get('location') %></div>
   <div class="time"><%= startAt %></div>
