--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -1,3 +1,6 @@
+//Variables
+$blue: rgba(31,188,255,1);
+
 //Fonts Mixins
 @mixin HN-Light {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -12,9 +15,9 @@
   font-weight: normal;
 }
 
-@mixin calc($attribute, $x, $y) {
-  #{$attribute}: -moz-calc(#{$x} - #{$y});
-  #{$attribute}: -webkit-calc(#{$x} - #{$y});
-  #{$attribute}: -o-calc(#{$x} - #{$y});
-  #{$attribute}: calc(#{$x} - #{$y});
+@mixin calc($attribute, $x) {
+  #{$attribute}: -moz-calc(#{$x});
+  #{$attribute}: -webkit-calc(#{$x});
+  #{$attribute}: -o-calc(#{$x});
+  #{$attribute}: calc(#{$x});
 }
