--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -121,7 +121,7 @@ $header-z: 100;
 .dropdown-link {
   line-height: 40px;
   border-top: 1px solid #dadada;
-  @include calc(width, 100%, 30px);
+  @include calc(width, "100% - 30px");
 }
 
 #user-dropdown {
