--- a/app/views/main/_header.html.erb
+++ b/app/views/main/_header.html.erb
@@ -26,11 +26,11 @@
           About
         </div>
       </a>
-      <a href="/bulletin" data-remote="true">
-        <div class="link">
-          Test Bulletin (<%= ENV['SENDGRID_USERNAME'] %>)
-        </div>
-      </a>
+      <!-- <a href="/bulletin" data-remote="true">
+              <div class="link">
+                Test Bulletin (<%= ENV['SENDGRID_USERNAME'] %>)
+              </div>
+            </a> -->
     </div>
     <div class="pull-right">
       <div id="user-dropdown">
