--- a/app/views/main/root.html.erb
+++ b/app/views/main/root.html.erb
@@ -1,18 +1,9 @@
 <%= render partial: "header", locals: { me: @me } %>
 <div id="content"></div>
 <div id="popover"></div>
-
-<% # Load backbone %>
-<%= javascript_include_tag "application" %>
-<% # Set up backbone %>
+<!-- Set up backbone -->
 <script type="text/javascript">
-  // Setting global event format string
-  Gandalf.currentUser = new Gandalf.Models.User();
-  Gandalf.currentUser.url = '/me';
-  Gandalf.currentUser.fetch({
-    success: function() {
-      window.router = new Gandalf.Router();
-      Backbone.history.start();
-    }
-  });
+  // Add current user as router parameter
+  window.router = new Gandalf.Router({ currentUser: <%= @me.to_json.html_safe %> });
+  Backbone.history.start();
 </script>
