--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Yale Go</title>
   <link rel="shortcut icon" href="/assets/y_logo_200.png" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="google-site-verification" content="q1eOWvzJqu60zry4uUiiIOOmboMBqHveYDLf7rYmIBI" />
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= csrf_meta_tags %>
   <!-- Load javascript assets -->
