--- a/app/assets/javascripts/backbone/templates/feed/panel.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/panel.jst.ejs
@@ -1,24 +1,19 @@
 <div class="container">
   <div class="panel-top">
-    <div class="panel-intro"></div>
-    <div class="content-calendar-nav"></div>
+    <div class="panel-intro half-inline left">
+      <h1>Up next for you</h1>
+    </div><div class="panel-cal-nav half-inline"> 
+    <!-- divs next to each other to solve the inline-block space problem -->
+      <div class="content-calendar-nav content-calendar-nav-panel"></div>
+    </div>
   </div>
-  <div class="panel-left">
+  <div class="panel-left half-inline left">
     <div class="main-event">
+    </div>
+    <div class="body-feed">
       
     </div>
-    <div class="event-list">
-      
-    </div>
+  </div><div class="panel-right half-inline">
+    <div class="content-calendar content-calendar-panel"></div>
   </div>
-  <div class="panel-right">
-    <div class="content-calendar"></div>
-  </div>
-</div>
-
-<div class="content-calendar-nav">
-  <div class="container"></div>
-</div>
-<div class="content-calendar"></div>
-<div class="content-body">
 </div>
