--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
 @import "main";
 @import "popover";
 @import "feed";
+@import "panel";
 @import "browse";
 @import "calendar";
 @import "dashboard";
