--- a/app/assets/stylesheets/calendar.css.scss
+++ b/app/assets/stylesheets/calendar.css.scss
@@ -3,15 +3,15 @@
 $cal-gap: 40px;
 $cal-head-height: 70px;
 $cal-top-pad: 10px;
-$hour-height: $calendar-height / 24 - 1px; // For the border
+// The entire height of the calendar is determined by the hour height.
+// That is, the size of the .calendar div will be 24 * $hour-height.
+$hour-height: 30px;
 
 // Redundant styling—here just to change bg color
-.calendar {
-  width: 100%; height: 100%;
-}
+
 .cal {
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
 }
 
 /* ====== NAVIGATION ======= */
@@ -26,7 +26,7 @@ $hour-height: $calendar-height / 24 - 1px; // For the border
 .cal-table {
   position: relative;
   width: 100%;
-  height: 100%;
+  border-right: 1pt solid #ddd;
   table-layout: fixed;
   td {
     vertical-align: top;
@@ -42,20 +42,17 @@ $hour-height: $calendar-height / 24 - 1px; // For the border
 .cal-day-inner {
   position: relative;
   width: 100%;
-  height: $calendar-height;
 }
 
 .cal-week .cal-day {
-  // background-color: #fdfdfd;
-  // z-index: -5;
   border-right: 1pt solid #ddd;
 }
 
 .cal-multiday {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top:0; left: 0;
+  position: relative;
+  border-right: 1pt solid #ddd;
+  padding-bottom: 2px;
+  border-bottom: 1pt solid #ddd;
 }
 
 .cal-month {
@@ -217,11 +214,10 @@ $test-color: lighten(#0f91ec, 20%);
 }
 
 .cal-multiday-event {
-  position: absolute;
-  height: $hour-height;
+  height: $hour-height - 6px;
+  margin-bottom: 3px;
   padding-left: 2px;
   font-size: 10px;
-  line-height: 150%;
   overflow: hidden;
   cursor: pointer;
   z-index: $cal-z + 5;              // At most 4 calendar events in a row
@@ -243,5 +239,37 @@ $test-color: lighten(#0f91ec, 20%);
     left: 3px;
     bottom: 3px; 
   }
+  &:after {
+
+  }
 }
 
+.arrow_box {
+  position: relative;
+  background: #88b7d5;
+  border: 1px solid #c2e1f5;
+}
+.arrow_box:after, .arrow_box:before {
+  left: 100%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+}
+
+.arrow_box:after {
+  border-color: red;
+  border-left-color: blue;
+  border-width: 10px;
+  top: 50%;
+  margin-top: -10px;
+}
+.arrow_box:before {
+  border-color: red;
+  border-left-color: blue;
+  border-width: 11px;
+  top: 50%;
+  margin-top: -11px;
+}
