--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -26,16 +26,19 @@
   min-height: 100px;
   font-size: 0;
   cursor: pointer;
-  width: 470px;
+  width: 100%;
   display: inline-block;
   margin-bottom: 20px;
   @include transition(0.2s);
+  /*
   &:nth-child(odd) {
     margin-right: 20px;
   }
+  */
   &:last-child {
     margin-bottom: 30px;
   }
+  $event-image-width: 100px;
   .event-image {
     position: absolute;
     left: 0px;
@@ -43,7 +46,7 @@
     border-right: 1px solid #DADADA;
     height: 100%;
     background: #EEE;
-    width: 100px;
+    width: $event-image-width;
     background-position: center;
     background-size: auto 100%;
     background-repeat: no-repeat;
@@ -52,7 +55,7 @@
     width: 349px;
     padding-left: 10px;
     padding-top: 10px;
-    margin-left: 101px;
+    margin-left: $event-image-width + 1;
     margin-bottom: 10px;
     vertical-align: middle;
     height: 100%;
