--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -17,80 +17,81 @@
   margin-top: 50px;
   color: #bbb; 
 }
-
+$small-feed-event-height: 75px;
+$large-feed-event-height: 150px;
 .feed-event {
-  background: white;
-  position: relative;
-  @include box-shadow(0 0 3px rgba(black, 0.3));
-  vertical-align: top;
-  min-height: 100px;
-  font-size: 0;
-  cursor: pointer;
-  width: 100%;
-  display: inline-block;
+  height: $small-feed-event-height;
   margin-bottom: 20px;
+  cursor: pointer;
+  @include box-shadow(0 0 3px rgba(black, 0.3));
   @include transition(0.2s);
-  /*
-  &:nth-child(odd) {
-    margin-right: 20px;
-  }
-  */
-  &:last-child {
-    margin-bottom: 30px;
-  }
-  $event-image-width: 100px;
   .event-image {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    border-right: 1px solid #DADADA;
-    height: 100%;
-    background: #EEE;
-    width: $event-image-width;
+    background-size: cover;
     background-position: center;
-    background-size: auto 100%;
     background-repeat: no-repeat;
+    height: 100%;
+    width: $small-feed-event-height;
+    display: inline-block;
+    vertical-align: top;
+    border-right: 1px solid #DADADA;
   }
   .details {
-    width: 349px;
+    width: 460px - $small-feed-event-height;
     padding-left: 10px;
-    padding-top: 10px;
-    margin-left: $event-image-width + 1;
-    margin-bottom: 10px;
-    vertical-align: middle;
-    height: 100%;
+    padding-top: 5px;
     display: inline-block;
   }
   .name {
-    font-size: 18px;
-    color: #333;
-    line-height: 100%;
-    padding-bottom: 8px;
     @include HN-Bold;
-    border-bottom: 1px solid #dadada;
-  }
-  .organization {
-    @include HN-Regular;
-    font-size: 15px;
-    border-bottom: 1px solid #dadada;
-    margin-bottom: 5px;
   }
   .time, .location {
-    @include HN-Regular;
-    font-size: 13px;
-    color: #333;
-    line-height: 20px;
-    span {
-      margin-right: 5px;
+    font-size: 80%;
+    [class*="icon"] {
       opacity: 0.5;
+      margin-right: 5px;
     }
   }
   &:hover {
     @include box-shadow(0 1px 5px rgba(black, 0.3));
   }
-  @include transition(background-color 0.2s);
-  &.event-hidden-org, &.event-hidden-cat {
+  .main-attr {
     display: none;
+  }
+}
+
+.main-event {
+  .feed-event {
+    height: $large-feed-event-height;
+    &:last-child {
+      margin-bottom: 30px;
+    }
+    .event-image {
+      width: $large-feed-event-height;
+    }
+    .details {
+      width: 460px - $large-feed-event-height;
+      padding-left: 15px;
+      padding-top: 10px;
+    }
+    .name {
+      display: block;
+      font-size: 18px;
+      margin-bottom: 8px;
+    }
+    .organization {
+      display: block;
+      font-size: 15px;
+      margin-bottom: 5px;
+    }
+    .time, .location {
+      font-size: 13px;
+    }
+    &.event-hidden-org, &.event-hidden-cat {
+      display: none;
+    }
+  }
+  .main-attr {
+    display: initial;
   }
 }
 
