--- a/app/assets/stylesheets/panel.css.scss
+++ b/app/assets/stylesheets/panel.css.scss
@@ -1,9 +1,10 @@
+$panel-width: 460px; // 48%.
 .half-inline {
-  width: 48%;
+  width: $panel-width;
   display: inline-block;
   vertical-align: top;
   &.left {
-    margin-right: 4%;
+    margin-right: (960 - 2 * $panel-width);
   }
 }
 $panel-top-height: 100px;
@@ -14,7 +15,14 @@ $panel-top-height: 100px;
     line-height: $panel-top-height - 20px;
   }
 }
-
+/*
+.panel-left {
+  width: 400px;
+}
+.panel-right {
+  width: 520px;
+}
+*/
 .panel-left, .panel-right {
   @extend .half-inline;
   height: 600px;
