--- a/app/assets/stylesheets/panel.css.scss
+++ b/app/assets/stylesheets/panel.css.scss
@@ -17,10 +17,11 @@ $header-height: 50px;
 
 .panel-top {
   height: $panel-top-height;
-  border-bottom: 1px solid #dadada;
   position: fixed;
   width: $width;
   top: $header-height;
+  border-bottom: 1px solid #dadada;
+  @include box-shadow(0 2px 2px -2px rgba(black, 0.2));
   h1 {
     line-height: $panel-top-height - 20px;
   }
@@ -29,28 +30,35 @@ $header-height: 50px;
 .panel {
   position: fixed;
   top: $panel-top-height + $header-height;
-  width: $panel-width;
   overflow-y: scroll;
 }
 
 .panel-left {
+  $panel-left-padding: 15px;
   @include box-shadow(2px 0px 5px -2px rgba(black, 0.2));
   @include calc(min-height, "100% - #{$header-height} - #{$panel-top-height}");
+  padding-right: $panel-left-padding;
+  padding-top: 15px;
+  width: $panel-width - $panel-left-padding;
   height: auto;
 }
 
 .panel-right {
   margin-left: $panel-width;
+  width: $panel-width;
   @include calc(height, "100% - #{$header-height} - #{$panel-top-height}");
 }
 
-// .panel-left, .panel-right {
-//   @extend .half-inline;
-//   height: 600px;
-//   @include calc(height, "100% - 105px");
-// }
+.panel-intro, .panel-cal-nav {
+  display: inline-block;
+}
+
+.panel-cal-nav {
+  float: right;
+  height: $panel-top-height;
+  width: $panel-width;
+}
 
 .content-calendar-nav-panel {
   width: 100%;
-  border: 1pt solid black;
 }
