--- a/app/assets/javascripts/backbone/templates/feed/panel.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/panel.jst.ejs
@@ -1,4 +1,4 @@
-<div class="container full-height">
+<div class="container">
   <div class="panel-top">
     <div class="panel-intro">
       <h1>Up next for you</h1>
