--- a/app/assets/stylesheets/feed.css.scss
+++ b/app/assets/stylesheets/feed.css.scss
@@ -1,4 +1,8 @@
-/* ====== FEED ==== */
+// Events feed
+
+// Variables
+$small-feed-event-unit: 75px;
+$large-feed-event-unit: 150px;
 
 .feed-day-header {
   border: 1px solid #dadada;
@@ -17,79 +21,98 @@
   margin-top: 50px;
   color: #bbb; 
 }
-$small-feed-event-height: 75px;
-$large-feed-event-height: 150px;
+
 .feed-event {
-  height: $small-feed-event-height;
+  min-height: $small-feed-event-unit;
+  height: auto;
   margin-bottom: 20px;
   cursor: pointer;
   @include box-shadow(0 0 3px rgba(black, 0.3));
   @include transition(0.2s);
+  position: relative;
+  
   .event-image {
+    position: absolute;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     height: 100%;
-    width: $small-feed-event-height;
-    display: inline-block;
-    vertical-align: top;
+    width: $small-feed-event-unit;
     border-right: 1px solid #DADADA;
   }
+  
   .details {
-    width: 460px - $small-feed-event-height;
-    padding-left: 10px;
-    padding-top: 5px;
-    display: inline-block;
+    @include calc(width, "100% - #{$small-feed-event-unit}");
+    padding: 7px 10px;
+    margin-left: $small-feed-event-unit;
   }
+  
   .name {
     @include HN-Bold;
+    font-size: 15px;
   }
-  .time, .location {
+  
+  .time,
+  .location {
     font-size: 80%;
+    
     [class*="icon"] {
       opacity: 0.5;
       margin-right: 5px;
     }
   }
+  
   &:hover {
     @include box-shadow(0 1px 5px rgba(black, 0.3));
   }
+  
   .main-attr {
     display: none;
   }
 }
 
 .main-event {
+  
   .feed-event {
-    height: $large-feed-event-height;
+    min-height: $large-feed-event-unit;
+    
     &:last-child {
       margin-bottom: 30px;
     }
+    
     .event-image {
-      width: $large-feed-event-height;
+      width: $large-feed-event-unit;
     }
+    
     .details {
-      width: 460px - $large-feed-event-height;
-      padding-left: 15px;
-      padding-top: 10px;
+      @include calc(width, "98% - #{$large-feed-event-unit}");
+      padding: 10px 15px;
+      margin-left: $large-feed-event-unit;
     }
+    
     .name {
       display: block;
       font-size: 18px;
       margin-bottom: 8px;
     }
+    
     .organization {
       display: block;
       font-size: 15px;
       margin-bottom: 5px;
     }
-    .time, .location {
+    
+    .time,
+    .location {
       font-size: 13px;
     }
-    &.event-hidden-org, &.event-hidden-cat {
+    
+    &.event-hidden-org,
+    &.event-hidden-cat {
       display: none;
     }
   }
+  
   .main-attr {
     display: initial;
   }
