--- a/app/assets/javascripts/backbone/templates/feed/event.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/event.jst.ejs
@@ -3,7 +3,7 @@
   <span class="name"><%= event.get("name") %></span>
   <span class="organization">
     by 
-    <a href="#/organizations/<%= event.get('organization_slug') %>">
+    <a class="organization-link" href="#/organizations/<%= event.get('organization_slug') %>">
       <%= event.get("organization") %>
     </a>
   </span>
