--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -1,13 +1,79 @@
 // Browse variables
 $image-width: 100px;
+$header-height: 50px;
+$nav-height: 80px;
+$content-width: 960px;
+$header-overlap: 10px;
+$background-color: white;
+$browse-image-unit: 100px;
 
 // Style
-.left-search input {
-  width: 90%;
-  padding: 5%;
-  border: none;
-  border-top: 1px solid #dadada;
+.fixed-browse-header {
+  position: fixed;
+  top: $header-height;
+  left: 50%;
+  height: $nav-height;
+  @include calc(margin-left, "-#{$content-width}/2");
   border-bottom: 1px solid #dadada;
+  @include box-shadow(0 2px 2px -2px rgba(black, 0.2));
+  z-index: 1;
+  background: $background-color;
+}
+
+.browse-content {
+  margin-top: $nav-height;
+  padding-top: 20px;
+}
+
+#browse-search {
+  margin: 20px 0;
+  font-size: 20px;
+  line-height: 24px;
+  padding: 8px 10px;
+  width: 50%;
+  @include HN-Light;
+  border: 1px solid #dadada;
+  color: $blue;
+  @include transition(0.2s);
+  border-radius: 3px;
+  
+  &:hover {
+    border: 1px solid #ddd;
+  }
+  
+  &:focus {
+    border: 1px solid #aaa;
+  }
+}
+
+.browse-nav-links {
+  margin: 20px 0;
+  height: 42px;
+  border: 1px solid #dadada;
+  border-radius: 3px;
+  line-height: 40px;
+  
+  a {
+    display: block;
+    float: left;
+    font-size: 15px;
+    line-height: 40px;
+    padding: 0 10px;
+    border-left: 1px solid #dadada;
+    @include transition(0.2s);
+    color: #333;
+    
+    &:first-child {
+      border-left: none;
+    }
+    
+    &.active,
+    &:hover {
+      background: #fafafa;
+      color: $blue;
+      text-decoration: none;
+    }
+  }
 }
 
 #browse-list {
@@ -20,9 +86,11 @@ $image-width: 100px;
   border: 1px solid #eee;
   margin-bottom: 15px;
   vertical-align: top;
+  
   &:nth-child(odd) {
     margin-right: 16px;
   }
+  
   &.organization {
     width: 234px;
     margin-right: 16px;
@@ -30,18 +98,21 @@ $image-width: 100px;
       margin-right: 0px;
     }
   }
+  
   .cover {
     width: 100%;
     height: 70px;
     background: $blue;
   }
+  
   .content {
     background: white;
     padding: 15px;
     position: relative;
     border-top: 1px solid #DADADA;
-    min-height: 100px;
+    @include calc(min-height, "#{$browse-image-unit} + 30px");
   }
+  
   .content-image {
     float: left;
     img {
