list view works as well as cal nav

--- a/app/assets/javascripts/backbone/templates/calendar_nav/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/calendar_nav/index.jst.ejs
@@ -10,6 +10,7 @@
   <i class='icon-eye-close'></i>
 </div>
 <div class="btn-group pull-right">
-  <a class="btn btn-mini week" href="<%= otherLink %>">Week</a>
-  <a class="btn btn-mini month" href="<%= otherLink %>">Month</a>
+  <a class="btn btn-mini list disabled" href="<%= dayLink %>">Day</a>
+  <a class="btn btn-mini week disabled" href="<%= weekLink %>">Week</a>
+  <a class="btn btn-mini month disabled" href="<%= monthLink %>">Month</a>
 </div>
