--- a/app/assets/javascripts/backbone/templates/feed/day.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/day.jst.ejs
@@ -1,2 +1,2 @@
-<div class="feed-day-header"><%= day %></div>
+<div class="feed-day-header">Happening <%= day %></div>
 <div class="feed-day-events"></div>
