--- a/app/assets/javascripts/backbone/templates/feed/panel.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/feed/panel.jst.ejs
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="panel-top">
     <div class="panel-intro">
-      <h1>Up next for you</h1>
+      <h1><%= headerText %></h1>
     </div>
     <div class="panel-cal-nav">
       <div class="content-calendar-nav content-calendar-nav-panel"></div>
