--- a/app/assets/javascripts/backbone/templates/browse/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/browse/index.jst.ejs
@@ -1,5 +1,7 @@
 <div class="fixed-browse-header content-header container">
-  <input placeholder="Search..." id="browse-search"></input>
+  <form id="search-form">
+    <input placeholder="Search..." id="browse-search"></input>
+  </form>
   <div class="pull-right browse-nav-links">
     <a href="#browse" data-type="all">All</a>
     <a href="#browse/organizations" data-type='organizations'>Organizations</a>
@@ -8,6 +10,5 @@
   </div>
 </div>
 <div class="content-container browse-content container">
-  <div id="browse-list">
-  </div>
+  <div id="browse-list"></div>
 </div>
