--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -25,12 +25,16 @@ $browse-image-unit: 100px;
   padding-top: 20px;
 }
 
+#search-form {
+  float: left;
+}
+
 #browse-search {
   margin: 20px 0;
   font-size: 20px;
   line-height: 24px;
   padding: 8px 10px;
-  width: 50%;
+  @include calc(width, "#{$content-width}/2");
   @include HN-Light;
   border: 1px solid #dadada;
   color: $blue;
@@ -76,19 +80,16 @@ $browse-image-unit: 100px;
   }
 }
 
-#browse-list {
-  padding-left: 10px;
-}
-
 .browse-result {
   display: inline-block;
-  width: 360px;
+  width: 230px;
   border: 1px solid #eee;
   margin-bottom: 15px;
   vertical-align: top;
+  margin-right: 13px;
   
-  &:nth-child(odd) {
-    margin-right: 16px;
+  &:nth-child(4) {
+    margin-right: 0;
   }
   
   &.organization {
@@ -101,7 +102,7 @@ $browse-image-unit: 100px;
   
   .cover {
     width: 100%;
-    height: 70px;
+    height: 55px;
     background: $blue;
   }
   
@@ -138,8 +139,8 @@ $browse-image-unit: 100px;
   }
   .organization {
     .organization-image {
-      width: 40px;
-      height: 40px;
+      width: 25px;
+      height: 25px;
       margin: 15px;
       background: $blue;
       float: left;
@@ -150,7 +151,7 @@ $browse-image-unit: 100px;
       font-size: 20px;
       display: block;
       float: left;
-      line-height: 70px;
+      line-height: 56px;
       float: left;
       @include HN-Light;
     }
@@ -172,4 +173,32 @@ $browse-image-unit: 100px;
   .updated-at {
     font-style: italic;
   }
+}
+
+.browse-container {
+  margin-bottom: 20px;
+}
+
+.browse-container-header {
+  border-bottom: 1px solid #dadada;
+  width: 100%;
+  
+  .inline-header {
+    display: inline-block;
+  }
+  
+  h2 {
+    @include HN-Light;
+  }
+  
+  a {
+    line-height: 70px;
+    font-size: 14px;
+  }
+}
+
+#browse-events,
+#browse-organizations,
+#browse-categories {
+  padding-top: 15px;
 }
