--- a/app/views/main/_header.html.erb
+++ b/app/views/main/_header.html.erb
@@ -11,7 +11,7 @@
           Discover
         </div>
       </a>
-      <a href="#calendar">
+      <a href="#today">
         <div class="link">
           Calendar
         </div>
