--- a/app/assets/javascripts/backbone/templates/dashboard/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/dashboard/index.jst.ejs
@@ -1,14 +1,9 @@
-<div class="content-header container">
-  <h1>Your Organization Dashboard</h1>
-</div>
-<div class="content-container container">
+<div class="content-container dashboard-content container">
   <div class="content-left">
-    <div class="left-header">Your Organizations:</div>
-    <ul class="left-list"></ul>
+    <div id="dashboard-organizations-list"></div>
+    <ul id="dashboard-menu" class="left-list"></ul>
   </div>
   <div class="content-main">
-    <ul class="dash-menu">
-    </ul>
     <div class="dash-content"></div>
   </div>
 </div>
